<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/header"
        android:layout_width="412dp"
        android:layout_height="63dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="#FFFFFF" />

    <TextView
        android:id="@+id/instruction_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:text="@string/instruction"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/instruction_text"
        android:layout_width="380dp"
        android:layout_height="107dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:text="@string/instruction_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/choice_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="244dp"
        android:text="@string/level_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/difficulty_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instruction_text">

        <RadioButton
            android:id="@+id/i3_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="56dp"
            android:checked="true"
            android:text="@string/i3_text"
            app:layout_constraintEnd_toStartOf="@+id/i5_button"
            tools:layout_editor_absoluteY="216dp" />

        <RadioButton
            android:id="@+id/i5_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="56dp"
            android:text="@string/i5_text"
            app:layout_constraintEnd_toStartOf="@+id/i7_button"
            tools:layout_editor_absoluteY="216dp" />

        <RadioButton
            android:id="@+id/i7_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i7_text"
            tools:layout_editor_absoluteX="280dp"
            tools:layout_editor_absoluteY="216dp" />

    </RadioGroup>

    <TextView
        android:id="@+id/operator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="+"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficulty_level" />

    <TextView
        android:id="@+id/operand_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="56dp"
        android:text="1"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/operator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficulty_level" />

    <TextView
        android:id="@+id/operand_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="48dp"
        android:text="1"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/operator"
        app:layout_constraintTop_toBottomOf="@+id/difficulty_level" />

    <EditText
        android:id="@+id/user_input"
        android:layout_width="412dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:hint="@string/hint_text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operator" />

    <Button
        android:id="@+id/check_button"
        android:layout_width="396dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_input" />

    <TextView
        android:id="@+id/point_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="12dp"
        android:text="@string/point"
        android:textColor="@android:color/holo_purple"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_button" />

    <TextView
        android:id="@+id/point_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="0"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/point_text"
        app:layout_constraintTop_toBottomOf="@+id/check_button" />

</androidx.constraintlayout.widget.ConstraintLayout>